--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
   <title>ASAP Poke</title>
 </head>
 <body>
+  
+    <nav id="nav">
+      <div class='nav-links'>
+        <a href="#">About</a>
+        <a href="#">Menu</a>
+        <a href="#">Order</a>
+        <a href="#">Hours</a>
+        <a href="#">Rewards</a>
+        <a href="#">Newsletter</a>
+      </div>
+    </nav>
+  
+
+  
   <main>
-    <h1>This is where content will go.</h1>
+    <section id='home' class="container pimg1">
+      <div class="left">
+        <div class="logo">
+          <img src="./logos/Asap-Poke.png" alt="ASAP Poke: Bowls and Rolls Logo">
+        </div>
+        <div class="btn-container">
+          <div class="order btn">
+            <h1>Order Now</h1>
+          </div>
+          <div class="rewards btn">
+            <h1>Earn Points</h1>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src='./app.js'></script>
