--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   
   <main>
-    <section id='home' class="container pimg1">
+    <!-- HOME Section-->
+    <section id='home' class="home-container pimg1">
       <div class="left">
         <div class="logo">
           <img src="./logos/Asap-Poke.png" alt="ASAP Poke: Bowls and Rolls Logo">
@@ -37,6 +38,99 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- About Us -->
+    <section id="about-us" class="container">
+      <div class="title">
+        <h2>About Us</h2>
+      </div>
+      <div class="content">
+        <p>ASAP Poke was born out of a single idea: to bring Chicago the freshest, sushi-quality fish coupled with seasonal ingredients, as fast as possible</p>
+        <p>Honoring the island tradition of sushi-quality fish and seasonal products, ASAP Poke is a chef-driven, delivery-only concept in Lincoln Park. Choose from our signature poke bowls or handcraft your own from an extensive list of ingredients, toppings and sauces.</p>
+      </div>
+    </section>
+
+    <!-- Second background image-->
+    <section class="pimg2"></section>
+
+    <!-- Menu -->
+    <section id="menu" class="container">
+      <div class="menu-title">
+        <h2>Menu</h2>
+      </div>
+      <div class="menu-sub-title">
+        <h3>This Week's Seasonal Ingredient</h3>
+      </div>
+      <div class="menu-description">
+        <p>Bluefin Tuna</p>
+      </div>
+      <!-- Menu Step 1 -->
+      <div class="bowl-choice">
+        <div class="menu-sub-title">
+          <h3>Step 1  Choose Your Bowl</h3>
+        </div>
+        <div class="menu-item">
+          <h4>Regular Bowl 12.95</h4>
+        </div>
+        <div class="menu-description">
+          <p>24 oz. bowl - great for lunch or dinner!</p>
+          <p>Choose Your Base: Sushi Rice, Brown Rice, Quinoa Tabouli, Greens</p>
+        </div>
+        <div class="menu-item">
+          <h4>Shorty Bowl 9.95</h4>
+        </div>
+        <div class="menu-description">
+          <p>18 oz. short bowl - perfect for snack or light meal.</p>
+          <p>Choose Your Base: Sushi Rice, Brown Rice, Quinoa Tabouli, Greens</p>
+        </div>
+      </div>
+      <!-- Menu Step 2 -->
+      <div class="poke-choice">
+        <div class="menu-sub-title">
+          <h3>Step 2  What’s Next? Choose Your Poke</h3>
+        </div>
+        <div class="menu-item">
+          <h4>Ahi Tuna</h4>
+          <h4>Atlantic Salmon</h4>
+          <h4>Gingered Beets</h4>
+        </div>
+      </div>
+      <!-- Menu Step 3 -->
+      <div class="style-choice">
+        <div class="menu-sub-title">
+          <h3>Step 3  Get Stoked. Choose Your Style</h3>
+        </div>
+
+        <div class="menu-item">
+          <h4>The Classic Avocado Poke Bowl</h4>
+        </div>
+        <div class="menu-description">
+          <p>Classic Poke Marinade, Sliced Cucumbers, Avocado, Soy Beans, Watermelon Radish, Seaweed, Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+        </div>
+
+        <div class="menu-item">
+          <h4>The Big Island Spicy Poke Bowl</h4>
+        </div>
+        <div class="menu-description">
+          <p>Spicy Mayo, Pickled Mushrooms, Diced Avocado, Sliced Jalapeños, Watermelon Radish,Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+        </div>
+
+        <div class="menu-item">
+          <h4>The Maui Crunch Poke Bowl</h4>
+        </div>
+        <div class="menu-description">
+          <p>Ponzu Sauce, Pickled Mushrooms, Seaweed, Watermelon Radish, Crunchy Shallots, Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+        </div>
+
+        <div class="menu-item">
+          <h4>Ginger-Yuzu Poke Bowl</h4>
+        </div>
+        <div class="menu-description">
+          <p>Cucumber, Edamame, Seaweed, Tomato Salsa, Tobiko, Watermelon radish, Pickled Ginger, Furikake (Asian Crunch Mix), Ginger-Yuzu Sauce</p>
+        </div>
+      </div>
+
     </section>
   </main>
 
