--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   
     <nav id="nav">
       <div class='nav-links'>
-        <a href="#">About</a>
-        <a href="#">Menu</a>
+        <a href="#about-us">About</a>
+        <a href="#menu">Menu</a>
         <a href="#">Order</a>
-        <a href="#">Hours</a>
+        <a href="#">Gallery</a>
         <a href="#">Rewards</a>
         <a href="#">Newsletter</a>
       </div>
@@ -54,9 +54,9 @@
     <!-- Second background image-->
     <section class="pimg2"></section>
 
-    <!-- Menu -->
+    <!-- Menu START -->
     <section id="menu" class="container">
-      <div class="menu-title">
+      <div class="menu title">
         <h2>Menu</h2>
       </div>
       <div class="menu-sub-title">
@@ -130,8 +130,24 @@
           <p>Cucumber, Edamame, Seaweed, Tomato Salsa, Tobiko, Watermelon radish, Pickled Ginger, Furikake (Asian Crunch Mix), Ginger-Yuzu Sauce</p>
         </div>
       </div>
-
     </section>
+    <!-- Menu END -->
+
+    <!-- PIC Gallery START -->
+    <section id="gallery" class="gallery-container">
+      <div class="gallery content">
+        <div class="gallery title">
+          <h2>Gallery</h2>
+        </div>
+        <div class="gallery images">
+          <img src="./images/ASAP Poke_Classic Ahi Tuna_75.jpg" alt="Ahi Tuna Poke Bowl">
+          <img src="./images/asap-poke-02.jpg" alt="Atlantic Salmon Poke Bowl">
+          <img src="./images/go-poke03.jpg" alt="Poke Toppings assembled on 1 plate">
+          <img src="./images/go-poke07.jpg" alt="Gingered Beets and Ahi Tuna Poke Bowls">
+        </div>
+      </div>
+    </section>
+    <!-- PIC Gallery END -->
   </main>
 
   <script src='./app.js'></script>
