included text color mods

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
     <nav id="nav">
-      <div class='nav-links'>
+      <div class='nav-links darker-text'>
         <a href="#about-us">About</a>
         <a href="#menu">Menu</a>
         <a href="#">Order</a>
@@ -41,7 +41,7 @@
     </section>
 
     <!-- About Us -->
-    <section id="about-us" class="container">
+    <section id="about-us" class="container darker-text">
       <div class="title">
         <h2>About Us</h2>
       </div>
@@ -55,7 +55,7 @@
     <section class="pimg2"></section>
 
     <!-- Menu START -->
-    <section id="menu" class="container">
+    <section id="menu" class="container dark-bg darker-text">
       <div class="menu title">
         <h2>Menu</h2>
       </div>
@@ -134,7 +134,7 @@
     <!-- Menu END -->
 
     <!-- PIC Gallery START -->
-    <section id="gallery" class="gallery-container">
+    <section id="gallery" class="gallery-container darker-text">
       <div class="gallery content">
         <div class="gallery title">
           <h2>Gallery</h2>
