updated input types

--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
               </div>
               <div class="form-grp">
                 <label for="email">Email:</label>
-                <input id='email' type="text" name="email" class='form-style'>
+                <input id='email' type="email" name="email" class='form-style'>
               </div>
               <div class="form-grp">
                 <label for="phone">Phone:</label>
-                <input id='phone' type="text" name="phone" class='form-style'>
+                <input id='tel' type="tel" name="tel" class='form-style'>
               </div>
               <div class="form-grp">
                 <label for="birthday">Birthday:</label>
@@ -197,7 +197,7 @@
               </div>
               <div class="form-grp">
                 <label for="zip-code">Zip Code:</label>
-                <input id='zip-code' type="text" name="zip-code" class='form-style'>
+                <input id='zip-code' type="number" name="zip-code" class='form-style'>
               </div>
 
               <button type='submit' id='form-btn' class='btn'>Sign Up!</button>
