section formatting/alignment for mobile

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
         </div>
         <div class="btn-container">
           <div class="order btn">
-            <h1>Order Now</h1>
+            <a href="#menu"><h1>Order Now</h1></a>
           </div>
           <div class="rewards btn">
-            <h1>Earn Points</h1>
+            <a href="#rewards"><h1>Earn Points</h1></a>
           </div>
         </div>
       </div>
     </section>
 
     <!-- About Us -->
-    <section id="about-us" class="container darker-text">
+    <section id="about-us" class="about-us darker-text">
       <div class="title">
         <h2>About Us</h2>
       </div>
       <div class="content">
-        <p>ASAP Poke was born out of a single idea: to bring Chicago the freshest, sushi-quality fish coupled with seasonal ingredients, as fast as possible</p>
+        <p>ASAP Poke was born out of a single idea: to bring Chicago the freshest, sushi-quality fish coupled with seasonal ingredients, as fast as possible.</p>
         <p>Honoring the island tradition of sushi-quality fish and seasonal products, ASAP Poke is a chef-driven, delivery-only concept in Lincoln Park. Choose from our signature poke bowls or handcraft your own from an extensive list of ingredients, toppings and sauces.</p>
       </div>
     </section>
@@ -55,20 +55,20 @@
     <section class="pimg2"></section>
 
     <!-- Menu START -->
-    <section id="menu" class="container darker-text">
+    <section id="menu" class="menu darker-text">
       <div class="menu title">
         <h2>Menu</h2>
       </div>
       <div class="menu-sub-title">
         <h3>This Week's Seasonal Ingredient</h3>
       </div>
-      <div class="menu-description">
+      <div class="menu-description feature">
         <p>Bluefin Tuna</p>
       </div>
       <!-- Menu Step 1 -->
       <div class="bowl-choice">
         <div class="menu-sub-title">
-          <h3>Step 1  Choose Your Bowl</h3>
+          <h3>Step 1: Choose Your Bowl</h3>
         </div>
         <div class="menu-item">
           <h4>Regular Bowl 12.95</h4>
@@ -88,7 +88,8 @@
       <!-- Menu Step 2 -->
       <div class="poke-choice">
         <div class="menu-sub-title">
-          <h3>Step 2  What’s Next? Choose Your Poke</h3>
+          <h3>Step 2: What’s Next?</h3>
+          <h3>Choose Your Poke</h3>
         </div>
         <div class="menu-item">
           <h4>Ahi Tuna</h4>
@@ -99,7 +100,8 @@
       <!-- Menu Step 3 -->
       <div class="style-choice">
         <div class="menu-sub-title">
-          <h3>Step 3  Get Stoked. Choose Your Style</h3>
+          <h3>Step 3: Get Stoked!</h3>
+          <h3>Choose Your Style</h3>
         </div>
 
         <div class="menu-item">
@@ -130,7 +132,6 @@
           <p>Cucumber, Edamame, Seaweed, Tomato Salsa, Tobiko, Watermelon radish, Pickled Ginger, Furikake (Asian Crunch Mix), Ginger-Yuzu Sauce</p>
         </div>
       </div>
-
       <div class="order btn">
         <h1>Order Now</h1>
       </div>
@@ -154,7 +155,7 @@
     <!-- PIC Gallery END -->
 
     <!-- Newsletter & Rewards Program START -->
-    <section id="newsletter-rewards">
+    <section id="newsletter-rewards" class='newsletter-rewards'>
       <div id="rewards" class="rewards darker-text">
         <div class="rewards-content">
           <div class="title">
@@ -197,7 +198,7 @@
               </div>
               <div class="form-grp">
                 <label for="zip-code">Zip Code:</label>
-                <input id='zip-code' type="number" name="zip-code" class='form-style'>
+                <input id='zip-code' type="text" name="zip-code" class='form-style'>
               </div>
 
               <button type='submit' id='form-btn' class='btn'>Sign Up!</button>
