new opacity pics added/form styled

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="title">
             <h2>Sign Up for our Newsletter</h2>
           </div>
-          <div class="rewards-form-container">
+          <div class="newsletter-form-container">
             <form action="#" method='POST' id='newsletter-form'>
 
               <div class="form-grp">
