--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
   
-    <nav id="nav">
-      <div class='nav-links darker-text'>
+    <nav id="nav" >
+      <div class="menu-icon" onClick='transformMenu(this)'>
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <div class='nav-links darker-text hide'>
         <a href="#about-us">About</a>
         <a href="#menu">Menu</a>
         <a href="#">Order Online</a>
