added menu toggle for mobiel

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <div class="bar3"></div>
       </div>
       <div class='nav-links darker-text hide'>
-        <a href="#about-us">About</a>
-        <a href="#menu">Menu</a>
-        <a href="#">Order Online</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#rewards">Rewards</a>
-        <a href="#newsletter">Newsletter</a>
+        <ul>
+          <li><a href="#about-us">About</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#">Order Online</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#rewards">Rewards</a></li>
+          <li><a href="#newsletter">Newsletter</a></li>
+        </ul>
       </div>
     </nav>
   
@@ -216,7 +218,7 @@
     <!-- Newsletter & Rewards Program END -->
 
   </main>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src='./app.js'></script>
 </body>
 </html>
