--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
-      <div class='nav-links darker-text hide'>
+      <div class='nav-links darker-text hide' onClick="closeMenu(this)">
         <ul>
           <li><a href="#about-us">About</a></li>
           <li><a href="#menu">Menu</a></li>
