--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
-      <div class='nav-links darker-text hide' onClick="closeMenu(this)">
-        <ul>
-          <li><a href="#about-us">About</a></li>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#">Order Online</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#rewards">Rewards</a></li>
-          <li><a href="#newsletter">Newsletter</a></li>
-        </ul>
-      </div>
+      <ul class='nav-links' onClick='closeMenu(this)'>
+        <li><a href="#about-us">About</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#">Order Online</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#rewards">Rewards</a></li>
+        <li><a href="#newsletter">Newsletter</a></li>
+      </ul>
     </nav>
   
 
@@ -218,7 +216,7 @@
     <!-- Newsletter & Rewards Program END -->
 
   </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src='./app.js'></script>
 </body>
 </html>
