--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="#menu"><h1>Order Now</h1></a>
           </div>
           <div role='button' class="btn">
-            <a href="#rewards"><h1>Earn Points</h1></a>
+            <a href="#newsletter-rewards"><h1>Earn Points</h1></a>
           </div>
         </div>
       </div>
@@ -148,18 +148,9 @@
     </section>
     <!-- Menu END -->
 
-    <!-- PIC Gallery START -->
-    <section id="gallery" class="gallery-container">
-      <div class="gallery content">
+    <!-- Third background image-->
+    <section class="pimg3"></section>
 
-        <div class="gallery-images">
-          <img src="./images/asap-poke-02.jpg" alt="Atlantic Salmon Poke Bowl">
-          <img src="./images/go-poke03.jpg" alt="Poke Toppings assembled on 1 plate">
-          <img src="./images/go-poke07.jpg" alt="Gingered Beets and Ahi Tuna Poke Bowls">
-        </div>
-      </div>
-    </section>
-    <!-- PIC Gallery END -->
 
     <!-- Newsletter & Rewards Program START -->
     <section aria-label='Join Frequent Diner program or sign up for our newsletter' id="newsletter-rewards" class='newsletter-rewards'>
