--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       </button>
 
       <ul class='nav-links' onClick='closeMenu(this)'>
+        <li><a href="#home">Home</a></li>
         <li><a href="#about-us">About</a></li>
         <li><a href="#menu">Menu</a></li>
         <li><a href="#">Order Online</a></li>
         <li><a href="#newsletter-rewards">Rewards</a></li>
-        <li><a href="#newsletter-rewards">Newsletter</a></li>
+        <li><a href="#newsletter">Newsletter</a></li>
       </ul>
     </nav>
 
@@ -60,7 +61,7 @@
     </section>
 
     <!-- Second background image-->
-    <section class="pimg2"></section>
+    <section class="pimg2" role='image' aria-label = "Salmon Poke Bowl with colorful vegtables surrounded by small bowls of radish, ginger and other sides"></section>
 
     <!-- Menu START -->
     <section aria-label='Our Menu' id="menu" class="menu">
@@ -149,7 +150,7 @@
     <!-- Menu END -->
 
     <!-- Third background image-->
-    <section class="pimg3"></section>
+    <section class="pimg3" role='image' aria-label='Image looking down at five different examples of poke bowls'></section>
 
 
     <!-- Newsletter & Rewards Program START -->
@@ -164,14 +165,14 @@
           <p>Not a Member?</p>
           <p>Download the LettuceEats App now!</p>
         </div>
-        <div class="rewards btn">
+        <div class="rewards-btn">
           <a href="https://www.leye.com/frequent-diner/" target='_blank'><h1>Download Now</h1></a>
         </div>
       </div>
       
       
 
-      <div class="newsletter-content">
+      <div id='newsletter' class="newsletter-content">
         <div class="title">
           <h2>Sign Up for our Newsletter</h2>
         </div>
