--- a/index.html
+++ b/index.html
@@ -65,82 +65,85 @@
 
     <!-- Menu START -->
     <section aria-label='Our Menu' id="menu" class="menu">
-      <div class="menu title">
+      <div class="title">
         <h2>Menu</h2>
       </div>
       <div class="weekly-special">
         <div class="menu-sub-title">
           <h3>This Week's Seasonal Ingredient</h3>
         </div>
-        <div class="menu-description feature">
-          <p>Bluefin Tuna</p>
+        <div class="menu-description">
+          <p class='feature'>Bluefin Tuna</p>
         </div>
       </div>
-      <!-- Menu Step 1 -->
-      <div class="bowl-choice">
-        <div class="menu-sub-title">
-          <h3>Step 1: Choose Your Bowl</h3>
-        </div>
-        <div class="menu-item">
-          <h4>Regular Bowl 12.95</h4>
-        </div>
-        <div class="menu-description">
-          <p>24 oz. bowl - great for lunch or dinner!</p>
-          <p>Choose Your Base: Sushi Rice, Brown Rice, Quinoa Tabouli, Greens</p>
-        </div>
-        <div class="menu-item">
-          <h4>Shorty Bowl 9.95</h4>
-        </div>
-        <div class="menu-description">
-          <p>18 oz. short bowl - perfect for snack or light meal.</p>
-          <p>Choose Your Base: Sushi Rice, Brown Rice, Quinoa Tabouli, Greens</p>
-        </div>
-      </div>
-      <!-- Menu Step 2 -->
-      <div class="poke-choice">
-        <div class="menu-sub-title">
-          <h3>Step 2: What’s Next?</h3>
-          <h3>Choose Your Poke</h3>
-        </div>
-        <div class="menu-item">
-          <h4>Ahi Tuna</h4>
-          <h4>Atlantic Salmon</h4>
-          <h4>Gingered Beets</h4>
-        </div>
-      </div>
-      <!-- Menu Step 3 -->
-      <div class="style-choice">
-        <div class="menu-sub-title">
-          <h3>Step 3: Get Stoked!</h3>
-          <h3>Choose Your Style</h3>
-        </div>
 
-        <div class="menu-item">
-          <h4>The Classic Avocado Poke Bowl</h4>
+      <div class="menu-choices">
+        <!-- Menu Step 1 -->
+        <div class="bowl-choice">
+          <div class="menu-sub-title">
+            <h3>Step 1: Choose Your Bowl</h3>
+          </div>
+          <div class="menu-item">
+            <h4>Regular Bowl 12.95</h4>
+          </div>
+          <div class="menu-description">
+            <p>24 oz. bowl - great for lunch or dinner!</p>
+            <p>Choose Your Base: Sushi Rice, Brown Rice, Quinoa Tabouli, Greens</p>
+          </div>
+          <div class="menu-item">
+            <h4>Shorty Bowl 9.95</h4>
+          </div>
+          <div class="menu-description">
+            <p>18 oz. short bowl - perfect for snack or light meal.</p>
+            <p>Choose Your Base: Sushi Rice, Brown Rice, Quinoa Tabouli, Greens</p>
+          </div>
         </div>
-        <div class="menu-description">
-          <p>Classic Poke Marinade, Sliced Cucumbers, Avocado, Soy Beans, Watermelon Radish, Seaweed, Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+        <!-- Menu Step 2 -->
+        <div class="poke-choice">
+          <div class="menu-sub-title">
+            <h3>Step 2: What’s Next?</h3>
+            <h3>Choose Your Poke</h3>
+          </div>
+          <div class="menu-item">
+            <h4>Ahi Tuna</h4>
+            <h4>Atlantic Salmon</h4>
+            <h4>Gingered Beets</h4>
+          </div>
         </div>
+        <!-- Menu Step 3 -->
+        <div class="style-choice">
+          <div class="menu-sub-title">
+            <h3>Step 3: Get Stoked!</h3>
+            <h3>Choose Your Style</h3>
+          </div>
 
-        <div class="menu-item">
-          <h4>The Big Island Spicy Poke Bowl</h4>
-        </div>
-        <div class="menu-description">
-          <p>Spicy Mayo, Pickled Mushrooms, Diced Avocado, Sliced Jalapeños, Watermelon Radish,Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
-        </div>
+          <div class="menu-item">
+            <h4>The Classic Avocado Poke Bowl</h4>
+          </div>
+          <div class="menu-description">
+            <p>Classic Poke Marinade, Sliced Cucumbers, Avocado, Soy Beans, Watermelon Radish, Seaweed, Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+          </div>
 
-        <div class="menu-item">
-          <h4>The Maui Crunch Poke Bowl</h4>
-        </div>
-        <div class="menu-description">
-          <p>Ponzu Sauce, Pickled Mushrooms, Seaweed, Watermelon Radish, Crunchy Shallots, Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
-        </div>
+          <div class="menu-item">
+            <h4>The Big Island Spicy Poke Bowl</h4>
+          </div>
+          <div class="menu-description">
+            <p>Spicy Mayo, Pickled Mushrooms, Diced Avocado, Sliced Jalapeños, Watermelon Radish,Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+          </div>
 
-        <div class="menu-item">
-          <h4>Ginger-Yuzu Poke Bowl</h4>
-        </div>
-        <div class="menu-description">
-          <p>Cucumber, Edamame, Seaweed, Tomato Salsa, Tobiko, Watermelon radish, Pickled Ginger, Furikake (Asian Crunch Mix), Ginger-Yuzu Sauce</p>
+          <div class="menu-item">
+            <h4>The Maui Crunch Poke Bowl</h4>
+          </div>
+          <div class="menu-description">
+            <p>Ponzu Sauce, Pickled Mushrooms, Seaweed, Watermelon Radish, Crunchy Shallots, Shredded Lettuce, Pickled Ginger, Sesame Seeds, Fresh Ginger, Scallions</p>
+          </div>
+
+          <div class="menu-item">
+            <h4>Ginger-Yuzu Poke Bowl</h4>
+          </div>
+          <div class="menu-description">
+            <p>Cucumber, Edamame, Seaweed, Tomato Salsa, Tobiko, Watermelon radish, Pickled Ginger, Furikake (Asian Crunch Mix), Ginger-Yuzu Sauce</p>
+          </div>
         </div>
       </div>
       <div class="order btn">
