--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="weekly-special">
         <div class="menu-sub-title">
-          <h3>This Week's Seasonal Ingredient</h3>
+          <h3>This Week's Seasonal Ingredient:</h3>
         </div>
         <div class="menu-description">
           <p class='feature'>Bluefin Tuna</p>
@@ -81,7 +81,7 @@
         <!-- Menu Step 1 -->
         <div class="bowl-choice">
           <div class="menu-sub-title">
-            <h3>Step 1: Choose Your Bowl</h3>
+            <h3 class='salmon-text'>Step 1: Choose Your Bowl</h3>
           </div>
           <div class="menu-item">
             <h4>Regular Bowl 12.95</h4>
@@ -101,8 +101,8 @@
         <!-- Menu Step 2 -->
         <div class="poke-choice">
           <div class="menu-sub-title">
-            <h3>Step 2: What’s Next?</h3>
-            <h3>Choose Your Poke</h3>
+            <h3 class='salmon-text'>Step 2: What’s Next?</h3>
+            <h3 class='salmon-text'>Choose Your Poke</h3>
           </div>
           <div class="menu-item">
             <h4>Ahi Tuna</h4>
@@ -113,8 +113,8 @@
         <!-- Menu Step 3 -->
         <div class="style-choice">
           <div class="menu-sub-title">
-            <h3>Step 3: Get Stoked!</h3>
-            <h3>Choose Your Style</h3>
+            <h3 class='salmon-text'>Step 3: Get Stoked!</h3>
+            <h3 class='salmon-text'>Choose Your Style</h3>
           </div>
 
           <div class="menu-item">
@@ -146,7 +146,7 @@
           </div>
         </div>
       </div>
-      <div class="order btn">
+      <div class="order-btn btn">
         <h1>Order Now</h1>
       </div>
     </section>
@@ -210,8 +210,14 @@
       
     </section>
     <!-- Newsletter & Rewards Program END -->
+  
 
+
+    <section class='footer'>
+      <p>&copy; Brian Wlazlo</p>
+    </section>
   </main>
+  
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src='./app.js'></script>
 </body>
