--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     
     <nav>
 
-      <button id='hamburger' aria-label='navigation menu' class="menu-icon js-menu-icon">
+      <button id='hamburger' aria-label='navigation menu' class="menu-icon">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
       </button>
 
-      <ul class='nav-links js-nav-links'>
+      <ul class='nav-links'>
         <li><a href="#home">Home</a></li>
         <li><a href="#about-us">About</a></li>
         <li><a href="#menu">Menu</a></li>
