--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <img src="./logos/Asap-Poke.png" alt="ASAP Poke: Bowls and Rolls Logo">
         </div>
         <div class="btn-container">
-          <div role='button' class="btn">
+          <div role='button' class="order-btn">
             <a href="#menu"><h1>Order Now</h1></a>
           </div>
-          <div role='button' class="btn">
+          <div role='button' class="points-btn">
             <a href="#newsletter-rewards"><h1>Earn Points</h1></a>
           </div>
         </div>
@@ -146,7 +146,7 @@
           </div>
         </div>
       </div>
-      <div class="order-btn btn js-order-btn">
+      <div class="order-btn js-order-btn">
         <h1><a href="https://www.chownow.com" target="_blank">Order Now</a></h1>
       </div>
     </section>
@@ -202,7 +202,7 @@
               <label for="zip-code">Zip Code*</label>
               <input id='zip-code' type="text" name="zip-code" class='form-style' required aria-required=”true”>
             
-              <button type='submit' id='form-btn' class='btn'>Sign Up!</button>
+              <button type='submit' id='form-btn' class='sign-up-btn'>Sign Up!</button>
             </div>
           </form>
         </div>
