--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
             </div>
 
             <div class="form-grp">
-              <label for="birthday">Birthday*</label>
-              <input id='birthday' type="date" name="birthday" class='form-style'required>
-            
+              <div>
+                <label for="birthday">Birthday*</label>
+                <input id='birthday' type="date" name="birthday" class='form-style'required>
+              </div>
               <label for="zip-code">Zip Code*</label>
               <input id='zip-code' type="text" name="zip-code" class='form-style' required aria-required=”true”>
             
