--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
                 <label for="birthday">Birthday*</label>
                 <input id='birthday' type="date" name="birthday" class='form-style'required>
               </div>
+              <div id="form-validation" class="form-validation error hide"></div>
               <label for="zip-code">Zip Code*</label>
               <input id='zip-code' type="text" name="zip-code" class='form-style' required aria-required=”true”>
             
@@ -207,6 +208,7 @@
             </div>
           </form>
         </div>
+        <div id="form-response" class="success hide"></div>
       </div>
       
     </section>
